[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apexbt"
version = "0.1.0"
description = "Your project description"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    # List your dependencies here
]

[tool.pyright]
venv = "./venv"

[tool.pytest]
python_files = "test_*.py"
testpaths = ["tests"]
