[tool.poetry]
name = "apexbt"
version = "0.1.0"
description = "ApexBT Trading Bot"
authors = ["Yash Patel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.14.0"
requests = "^2.31.0"
gspread = "^5.12.0"
oauth2client = "^4.1.3"
python-telegram-bot = "13.7"
langchain = "^0.0.350"
langchain-google-genai = "^0.0.5"
google-cloud-api-keys = "^0.5.3"
boto3 = "^1.34.11"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.0"
websockets = "^11.0.3"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pyright = "^1.1.339"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venv = ".venv"
include = ["apexbt"]
exclude = ["**/node_modules", "**/__pycache__", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest]
python_files = "test_*.py"
testpaths = ["tests"]
